変更：ソース変更

--- a/admin_login/admin_login.html
+++ b/admin_login/admin_login.html
@@ -32,7 +32,7 @@ ID<br />
 パスワード<br />
 <input type="password" name="pass"><br />
 <br />
-<input type="submit" onClick="return check()" name="ログイン">
+<input type="submit" onClick="return check()" value="ログイン">
 </form>
 
 </body>
